--- a/README
+++ b/README
@@ -4,7 +4,7 @@ has_ancestor
 see test/fixtures for examples of models which implement 
 has_ancestor and has_descendant.
 
-see test/spec/specs for rspec examples which impliment the 
+see test/spec/specs for rspec examples which implement the 
 models in test/fixtures.
 
 to run specs type the following in the installation directory
