--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 has_ancestor
 =================
 
+install and use
+http://research.inplanb.com/has_ancestor
+
 see test/fixtures for examples of models which implement 
 has_ancestor and has_descendant.
 
@@ -11,7 +14,7 @@ to run specs type the following in the installation directory
 
 rake spec
 
-to generate and html spec report type the following in the 
+to generate html spec report type the following in the 
 installation directory
 
 rake spec_report
