--- a/README
+++ b/README
@@ -4,11 +4,8 @@ has_ancestor
 install and use, see
 http://research.inplanb.com/has_ancestor
 
-test/fixtures contains examples of models which implement 
+test/rails_root/spec/model contains examples which implement 
 has_ancestor and has_descendant.
-
-test/spec/specs contains rspec examples which implement the 
-models in test/fixtures.
 
 to run specs configure test/rails_root/config/database.yml and type the following in the 
 installation directory
